# CAD-analyser

./: .gitignore  CMakeLists.txt  README.md
src/: dwg_parser.cpp  dwg_parser.h  entity_extractors.cpp  entity_extractors.h  json_builder.cpp  json_builder.h  main.cpp  text_utils.cpp  text_utils.h
